// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders as checked 1`] = `
.c3 {
  position: absolute;
  width: var(--switch-width);
  height: var(--switch-height);
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  cursor: pointer;
  background-color: #1A212A;
  background-position: left 0.5rem center,right 0.5rem center;
  background-repeat: no-repeat;
  border-radius: calc(var(--switch-width) + 0.125rem);
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 0.4s;
  transition-duration: 0.4s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

.c3::before {
  --switch-indicator-size: calc(var(--switch-height) - 0.5rem);
  content: "";
  position: absolute;
  width: var(--switch-indicator-size);
  height: var(--switch-indicator-size);
  left: 0.25rem;
  bottom: 0.25rem;
  background-color: #232A33;
  border-radius: 50%;
  -webkit-transition: inherit;
  transition: inherit;
  -webkit-transition-property: background-color,-webkit-transform;
  -webkit-transition-property: background-color,transform;
  transition-property: background-color,transform;
  will-change: transform;
}

.c0 {
  --switch-width: 4rem;
  --switch-height: 2rem;
  position: relative;
  display: inline-block;
  width: var(--switch-width);
  height: var(--switch-height);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c1:checked + .c2 {
  background-color: #0CCF61;
}

.c1:checked + .c2::before {
  background-color: #FFFFFF;
  -webkit-transform: translateX(calc(var(--switch-width) / 2));
  -ms-transform: translateX(calc(var(--switch-width) / 2));
  transform: translateX(calc(var(--switch-width) / 2));
}

<label
  className="c0"
>
  <input
    checked={true}
    className="c1"
    id="test-switch-2"
    type="checkbox"
  />
  <span
    className="c2 c3"
  />
</label>
`;

exports[`Switch renders by default 1`] = `
.c3 {
  position: absolute;
  width: var(--switch-width);
  height: var(--switch-height);
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  cursor: pointer;
  background-color: #1A212A;
  background-position: left 0.5rem center,right 0.5rem center;
  background-repeat: no-repeat;
  border-radius: calc(var(--switch-width) + 0.125rem);
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 0.4s;
  transition-duration: 0.4s;
  -webkit-transition-timing-function: ease;
  transition-timing-function: ease;
}

.c3::before {
  --switch-indicator-size: calc(var(--switch-height) - 0.5rem);
  content: "";
  position: absolute;
  width: var(--switch-indicator-size);
  height: var(--switch-indicator-size);
  left: 0.25rem;
  bottom: 0.25rem;
  background-color: #232A33;
  border-radius: 50%;
  -webkit-transition: inherit;
  transition: inherit;
  -webkit-transition-property: background-color,-webkit-transform;
  -webkit-transition-property: background-color,transform;
  transition-property: background-color,transform;
  will-change: transform;
}

.c0 {
  --switch-width: 4rem;
  --switch-height: 2rem;
  position: relative;
  display: inline-block;
  width: var(--switch-width);
  height: var(--switch-height);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c1:checked + .c2 {
  background-color: #0CCF61;
}

.c1:checked + .c2::before {
  background-color: #FFFFFF;
  -webkit-transform: translateX(calc(var(--switch-width) / 2));
  -ms-transform: translateX(calc(var(--switch-width) / 2));
  transform: translateX(calc(var(--switch-width) / 2));
}

<label
  className="c0"
>
  <input
    checked={false}
    className="c1"
    id="test-switch-1"
    type="checkbox"
  />
  <span
    className="c2 c3"
  />
</label>
`;
